      Edman.
    - Removed the supposedly misleading error message mentioned in Bug #294.
      Patch from Matt Edman.
    - Stop warning when a single nameserver fails: only warn when _all_ of
      our nameservers have failed.  (Bug #326.)
    - When we only have one nameserver, raise the threshold for deciding that
      the nameserver is dead. (Also bug #326)

  o Controller features:
    - Have GETINFO dir/status/* work on hosts with DirPort disabled.
    - Reimplement GETINFO so that info/names stays in sync with the
      actual keys.
    - Implement "GETINFO fingerprint".
    - Implement "SETEVENTS GUARD" so controllers can get updates on
      entry guard status as it changes.

  o Controller bugfixes:
    - Report the circuit number correctly in STREAM CLOSED events. (Bug
      reported by Mike Perry.)
    - Do not report bizarre values for results of accounting GETINFOs
      when the last second's write or read exceeds the alloted bandwidth.
    - Report "unrecognized key" rather than an empty string when the
      controller tries to fetch a networkstatus that doesn't exist.


Changes in version 0.1.2.4-alpha - 2006-12-03
  o Major features:
    - Add support for using natd; this allows FreeBSDs earlier than
      5.1.2 to have ipfw send connections through Tor without using
      SOCKS. (Patch from Zajcev Evgeny with tweaks from tup.)

  o Minor features:
    - Make all connections to addresses of the form ".noconnect"
      immediately get closed. This lets application/controller combos
      successfully test whether they're talking to the same Tor by
      watching for STREAM events.
    - Make cross.sh cross-compilation script work even when autogen.sh
      hasn't been run. (Patch from Michael Mohr.)
    - Statistics dumped by -USR2 now include a breakdown of public key
      operations, for profiling.

  o Major bugfixes:
    - Fix a major leak when directory authorities parse their